[gd_scene load_steps=15 format=2]

[ext_resource path="res://entities/Turret.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Shield.gd" type="Script" id=2]
[ext_resource path="res://sprites/MiniBoss.png" type="Texture" id=3]
[ext_resource path="res://Emitter.tscn" type="PackedScene" id=4]
[ext_resource path="res://sfx/Explosion/Explosion2__006.wav" type="AudioStream" id=5]
[ext_resource path="res://scripts/EnemyMiniboss.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 22.5, 13.5 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 48, 32 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 32.0

[node name="EnemyMiniboss" type="Node2D"]
script = ExtResource( 6 )
points = 50
speed = 150

[node name="PathTimer" type="Timer" parent="."]
one_shot = true

[node name="FacingTimer" type="Timer" parent="."]
one_shot = true

[node name="DieTimer" type="Timer" parent="."]
one_shot = true

[node name="AimTimer" type="Timer" parent="."]
one_shot = true

[node name="Body" type="Node2D" parent="."]

[node name="Hull" type="Area2D" parent="Body"]
collision_layer = 240
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Hull"]
position = Vector2( 0.5, 1.5 )
shape = SubResource( 8 )

[node name="Emitters" type="Node2D" parent="Body"]

[node name="Turret" parent="Body/Emitters" instance=ExtResource( 1 )]
position = Vector2( 16, 8 )
fire_time = 0.5

[node name="Turret2" parent="Body/Emitters" instance=ExtResource( 1 )]
position = Vector2( -16, 8 )
fire_time = 0.5

[node name="DieParticle" type="CPUParticles2D" parent="Body"]
emitting = false
amount = 400
lifetime = 0.5
preprocess = 1.0
explosiveness = 1.0
lifetime_randomness = 0.68
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 137.62
initial_velocity_random = 0.66

[node name="DamageParticle" type="CPUParticles2D" parent="Body"]
emitting = false
amount = 100
lifetime = 0.5
lifetime_randomness = 0.57
local_coords = false
direction = Vector2( 0, -1 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="Body"]
frames = SubResource( 7 )

[node name="Shield" type="Area2D" parent="Body/AnimatedSprite"]
collision_layer = 224
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/AnimatedSprite/Shield"]
visible = false
shape = SubResource( 2 )

[node name="DieSfx" type="AudioStreamPlayer2D" parent="Body"]
stream = ExtResource( 5 )

[node name="MineEmitter" parent="Body" instance=ExtResource( 4 )]
pool_name = "enemy_mine"

[connection signal="timeout" from="PathTimer" to="." method="_on_PathTimer_timeout"]
[connection signal="timeout" from="DieTimer" to="." method="_on_DieTimer_timeout"]
